--- a/template/index.html
+++ b/template/index.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Amazon</title>
+    <title>Amazona</title>
   </head>
   <body>
     <div class="grid-container">
-      <header class="row">
+      <header>
         <div>
-          <a href="/" class="brand">amazona</a>
+          <a href="/">amazona</a>
         </div>
         <div>
           <a href="/cart">Cart</a>
@@ -23,28 +18,12 @@
         </div>
       </header>
       <main>
-        <div class="row center">
-          <div class="card">
-            <a href="/product">
-              <img src="./images/p1.jpg" alt="product" class="medium" />
-            </a>
-            <div class="card-body">
-              <a href="/product">
-                <h2>Nike Slim Shirts</h2>
-              </a>
-              <div class="rating">
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-              </div>
-              <div class="price">$120</div>
-            </div>
-          </div>
-        </div>
+        <ul>
+          <li>Product 1</li>
+          <li>Product 2</li>
+        </ul>
       </main>
-      <footer class="row center">All right reserved</footer>
+      <footer>All right reserved</footer>
     </div>
   </body>
 </html>
