--- a/template/index.html
+++ b/template/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Amazona</title>
   </head>
   <body>
     <div class="grid-container">
-      <header>
+      <header class="row">
         <div>
-          <a href="/">amazona</a>
+          <a class="brand" href="/">amazona</a>
         </div>
         <div>
           <a href="/cart">Cart</a>
@@ -23,7 +24,7 @@
           <li>Product 2</li>
         </ul>
       </main>
-      <footer>All right reserved</footer>
+      <footer class="row center">All right reserved</footer>
     </div>
   </body>
 </html>
